# w207-predictive-maintenance

./: .gitignore  README.md  main.py  pyproject.toml
.history/: README_20250914203851.md  README_20250914204045.md  README_20250914204124.md  README_20250914204230.md  pyproject_20250914211725.toml
data/processed/: encoded_unscaled_df.csv
data/raw/: ai4i2020.csv
experiments/notebooks/: experiments.ipynb  juba-experiments-baseline-to-logistic.ipynb  juba-experiments.ipynb  paul_hdf_experiment.ipynb  paul_mf_experiment.ipynb  paul_xgboost.ipynb
experiments/notebooks/wandb/: latest-run
experiments/results/Experiments _ predictive-maintenance – Weights & Biases_files/: CallPage-BQY8xaAL.css  consentAwareAnalyticsInjector.js  destination  env.js  f.txt  gtm.js  index-B7Y2MhgC.css  (+9 more)
experiments/wandb/: latest-run
notebooks/: 20251023_BaselineBinaryClassification.ipynb  20251023_BaselineMultiClassification.ipynb  207_lab1.ipynb  BaselineBinaryClassification.ipynb  BaselineMultiClassification.ipynb  DNN_Jeremy.ipynb  classImbalance_exploration_jubaCochran.ipynb  eda_paul.ipynb  mlstrat_kfold_jubaCochran.ipynb  rebaseline_jubaCochran.ipynb  tuning_experiments_model_jubaCochran.ipynb
notebooks/juba_experiments_code/: README.md  db.sqlite3  feature_selection-JubaCochran.ipynb  target_feature_engineering_jubaCochran.ipynb  tuning_experiments_model_jubaCochran.ipynb
reports_by_milestone/: week_3
reports_by_milestone/week_07/: class_imbalance_data.csv
src/pipeline/: Data_description.ipynb  data_splits.ipynb  data_splits_jubaCochran.ipynb  wandb_datasets.ipynb
(+18 files in other folders)
