[project]
name = "207-pm"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "tensorflow>=2.13",
  "matplotlib",
  "seaborn",
  "wandb",
  "jupyter",
  "ipykernel",
  "pyprojroot>=0.3.0",
]

[project.optional-dependencies]
# Install on Apple Silicon with: uv sync --extra mac-accel
mac-accel = ["tensorflow-metal"]
