[project]
name = "207-pm"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "tensorflow>=2.13",
  "matplotlib",
  "seaborn",
  "wandb",
  "jupyter",
  "ipykernel",
  "ucimlrepo>=0.0.7",
  "pyprojroot>=0.3.0",
  "keras-tuner>=1.4.7",
  "mlxtend>=0.23.4",
  "optuna>=4.5.0",
  "tensorflow-probability>=0.25.0",
  "tf-keras>=2.20.1",
  "scipy>=1.16.2",
  "imblearn>=0.0",
  "iterative-stratification>=0.1.9",
  "optuna-dashboard>=0.19.0",
  "plotly>=6.4.0",
]

[project.optional-dependencies]
# Install on Apple Silicon with: uv sync --extra mac-accel
mac-accel = ["tensorflow-metal"]

